test-addon/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "nginx-ingress"
  labels:
    app.kubernetes.io/name: "ingress"
    app.kubernetes.io/instance: "ingress"
spec:
  rules:
  - host: "your-domain.com"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: "nginx-service"
            port:
              number: 80
